# skypro_oop_course

./: .flake8  README.md  main.py  pyproject.toml
src/: basic_class.py  file_manager.py  headhunter.py  vacancies.py
tests/: conftest.py  test_api_headhunter.py  test_file_manager.py  test_utils.py  test_vacancies.py
utils/: custom_exception.py  utils.py
